RESOLVED FIXED173727
REGRESSION (r217223): [iOS] Video keeps playing after application is backgrounded
https://bugs.webkit.org/show_bug.cgi?id=173727
Summary REGRESSION (r217223): [iOS] Video keeps playing after application is backgrou...
Jer Noble
Reported 2017-06-22 10:59:13 PDT
REGRESSION (r217223): [iOS] Video keeps playing after application is backgrounded
Attachments
Patch (1.61 KB, patch)
2017-06-22 11:00 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2017-06-22 11:00:47 PDT
Jer Noble
Comment 2 2017-06-22 11:02:04 PDT
Eric Carlson
Comment 3 2017-06-22 11:12:47 PDT
Comment on attachment 313641 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=313641&action=review > Source/WebCore/html/HTMLMediaElement.cpp:5342 > + m_elementIsHidden = document().hidden() && m_videoFullscreenMode != VideoFullscreenModePictureInPicture; Don't we also want to override when playing to AppleTV?
Jer Noble
Comment 4 2017-06-22 11:40:22 PDT
(In reply to Eric Carlson from comment #3) > Comment on attachment 313641 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=313641&action=review > > > Source/WebCore/html/HTMLMediaElement.cpp:5342 > > + m_elementIsHidden = document().hidden() && m_videoFullscreenMode != VideoFullscreenModePictureInPicture; > > Don't we also want to override when playing to AppleTV? That's handled in shouldOverrideBackgroundPlaybackRestriction(); in the case that we are playing to the AppleTV, the interruption is overridden.
WebKit Commit Bot
Comment 5 2017-06-22 11:56:19 PDT
Comment on attachment 313641 [details] Patch Clearing flags on attachment: 313641 Committed r218710: <http://trac.webkit.org/changeset/218710>
WebKit Commit Bot
Comment 6 2017-06-22 11:56:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.