REGRESSION (r217223): [iOS] Video keeps playing after application is backgrounded https://bugs.webkit.org/show_bug.cgi?id=173727

Reviewed by Eric Carlson.

Only override media element visibility if it is in picture-in-picture mode (not fullscreen generally).

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::visibilityStateChanged):


Canonical link: https://commits.webkit.org/190593@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218710 268f45cc-cd09-0410-ab3c-d52691b4dbfc